--- a/build.gradle
+++ b/build.gradle
@@ -4,16 +4,13 @@ plugins {
 	// id 'java'
 }
 
-allprojects {
-    group = 'com.todolist'
-    version = '1.0'
-}
-
 subprojects {
     apply plugin: 'java'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
     
+    group = 'com.todolist'
+    version = '1.0'
     sourceCompatibility = '1.8'
 
     repositories {
@@ -23,9 +20,14 @@ subprojects {
     dependencies {
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
+        
+        testCompileOnly 'org.projectlombok:lombok'
+        testAnnotationProcessor 'org.projectlombok:lombok'
+
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
+
     }
 
     task initSourceFolders {
@@ -40,16 +42,17 @@ subprojects {
             }
         }
     }
+
 }
 
 project(':todo-list-api') {
     dependencies {
-        compile project(':todo-list-common')
+        implementation project(':todo-list-common')
     }
 }
 
 project(':todo-list-web') {
 	dependencies {
-		compile project(':todo-list-common')
+		implementation project(':todo-list-common')
 	}
 }
