환경설정 작업4

--- a/build.gradle
+++ b/build.gradle
@@ -42,7 +42,10 @@ subprojects {
             }
         }
     }
-
+    
+    test {
+        useJUnitPlatform()
+    }
 }
 
 project(':todo-list-api') {
