--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.2.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	// id 'java'
+    id "com.moowork.node" version "1.3.1"
 }
 
 subprojects {
@@ -55,7 +56,22 @@ project(':todo-list-api') {
 }
 
 project(':todo-list-web') {
+    apply plugin: "com.moowork.node"
+
+    node {
+        version = '10.15.0'
+        npmVersion = '6.4.1'
+        download = false
+    }
+
+    task webpack(type: NpmTask, dependsOn: 'npmInstall') {
+        args = ['run', 'build']
+    }
+
+    processResources.dependsOn 'webpack'
+
 	dependencies {
 		implementation project(':todo-list-common')
 	}
+
 }
