--- a/build.gradle
+++ b/build.gradle
@@ -2,11 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.2.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	// id 'java'
-}
-
-allprojects {
-    group = 'com.todolist'
-    version = '1.0'
+    id "com.moowork.node" version "1.3.1"
 }
 
 subprojects {
@@ -14,6 +10,8 @@ subprojects {
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
     
+    group = 'com.todolist'
+    version = '1.0'
     sourceCompatibility = '1.8'
 
     repositories {
@@ -23,6 +21,10 @@ subprojects {
     dependencies {
         compileOnly 'org.projectlombok:lombok'
         annotationProcessor 'org.projectlombok:lombok'
+        
+        testCompileOnly 'org.projectlombok:lombok'
+        testAnnotationProcessor 'org.projectlombok:lombok'
+
         testImplementation('org.springframework.boot:spring-boot-starter-test') {
             exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
         }
@@ -40,16 +42,46 @@ subprojects {
             }
         }
     }
+    
+    test {
+        useJUnitPlatform()
+    }
 }
 
 project(':todo-list-api') {
     dependencies {
-        compile project(':todo-list-common')
+        implementation project(':todo-list-common')
     }
 }
 
 project(':todo-list-web') {
+    apply plugin: "com.moowork.node"
+
+    node {
+        version = '12.11.1'
+        npmVersion = '6.13.4'
+        download = false
+        // workDir = file("./src/front")
+        // npmWorkDir = file("./src/front")
+        nodeModulesDir = file("./src/front")
+    }
+
+    task setUp(type: NpmTask) {
+        description = "Install Node.js package"
+        args = ['install']
+        inputs.files file('package.json')
+        outputs.files file('node_modules')
+    }
+
+    task buildFront(type: NpmTask, dependsOn: setUp) {
+        description = "Build vue.js"
+        args = ['run', 'build']
+    }
+
+    processResources.dependsOn 'buildFront'
+
 	dependencies {
-		compile project(':todo-list-common')
+		implementation project(':todo-list-common')
 	}
+
 }
