--- a/build.gradle
+++ b/build.gradle
@@ -61,8 +61,9 @@ project(':todo-list-web') {
         version = '12.11.1'
         npmVersion = '6.13.4'
         download = false
-        // workDir = file("./src/front")
-        // npmWorkDir = file("./src/front")
+        // npm, node 설치파일 저장 디렉토리 명시
+        // workDir = file("./src/front")  // node
+        // npmWorkDir = file("./src/front") // npm
         nodeModulesDir = file("./src/front")
     }
 
