코드리뷰 결과 수정 작업1

--- a/build.gradle
+++ b/build.gradle
@@ -7,11 +7,12 @@ plugins {
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'java-library'
     apply plugin: 'org.springframework.boot'
     apply plugin: 'io.spring.dependency-management'
-    
+
     group = 'com.todolist'
-    version = '1.0'
+    version = '1.0.0'
     sourceCompatibility = '1.8'
 
     repositories {
@@ -46,37 +47,4 @@ subprojects {
     test {
         useJUnitPlatform()
     }
-}
-
-project(':todo-list-web') {
-    apply plugin: "com.moowork.node"
-
-    node {
-        version = '12.11.1'
-        npmVersion = '6.13.4'
-        download = false
-        // npm, node 설치파일 저장 디렉토리 명시
-        // workDir = file("./src/front")  // node
-        // npmWorkDir = file("./src/front") // npm
-        nodeModulesDir = file("./src/front")
-    }
-
-    task setUp(type: NpmTask) {
-        description = "Install Node.js package"
-        args = ['install']
-        inputs.files file('package.json')
-        outputs.files file('node_modules')
-    }
-
-    task buildFront(type: NpmTask, dependsOn: setUp) {
-        description = "Build vue.js"
-        args = ['run', 'build']
-    }
-
-    processResources.dependsOn 'buildFront'
-
-	dependencies {
-		implementation project(':todo-list-common')
-	}
-
 }
