BootstapVue plugin 추가

--- a/todo-list-web/build.gradle
+++ b/todo-list-web/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     implementation project(':todo-list-common')
     implementation 'org.springframework.boot:spring-boot-starter-web'
     // implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    compileOnly("org.springframework.boot:spring-boot-devtools")
 }
